--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,9 +7,9 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-  os: Windows, Ubuntu, MacOS
+  os: ubuntu-20.04
   tools:
-    python: "3.6 - 3.10"
+    python: "3.9"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
