--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -1,4 +1,4 @@
-name: Pytest Python Package using Conda
+name: Python Package using Conda
 
 on: [push]
 
@@ -16,15 +16,18 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Add conda to system path
+    - name: Install Miniconda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-update-conda: true
+        python-version: ${{ matrix.python-version }}
+    - name: Create and activate conda environment
       run: |
-        echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install dependencies
-      run: |
-        conda env update --file environment.yml --name base
+        conda env create --file environment.yml --name myenv
+        echo "conda activate myenv" >> ~/.bashrc
+        source ~/.bashrc
     - name: Install pyuppaal
-      run: |
-        pip install pyuppaal
+      run: pip install pyuppaal
     - name: Lint with flake8
       run: |
         conda install flake8
