modified:   .github/workflows/python-package-conda.yml

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -30,13 +30,20 @@ jobs:
         source ~/.bashrc
         conda activate myenv
     - name: Install pyuppaal
-      run: pip install pyuppaal
+      run: |
+        source ~/.bashrc
+        conda activate myenv
+        pip install pyuppaal
     - name: Lint with flake8
       run: |
+        source ~/.bashrc
+        conda activate myenv
         conda install flake8
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        source ~/.bashrc
+        conda activate myenv
         conda install pytest
         pytest
